[build-system]
requires = ["setuptools>=65.5.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ueagents_envs"
description = "Unreal Machine Learning Agents Interface based on Unity ML Agents"
readme = "README.md"
authors = [
    { name = "Stephane Capponi" }
]
license = { text = "Apache Software License" }
requires-python = ">=3.10.1"
dependencies = [
    "gymnasium",
    "numpy>=1.24.0",
    "grpcio>=1.66.2",
    "protobuf>=3.20.3,<7",
    "grpcio-tools>=1.46"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/AlanLaboratory/UnrealMLAgents"

[tool.setuptools]
packages = ["ueagents_envs"]

[tool.setuptools.exclude-package-data]
ueagents_envs = ["*.tests", "*.tests.*", "tests.*", "tests", "colabs", "*.ipynb"]

[tool.setuptools.package-data]
"ueagents_envs" = ["LICENSE*", "LICEN[CS]E*"]

[tool.setuptools.dynamic]
version = { attr = "ueagents_envs.__version__" }